--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <article class="tCenter">
           <h3>Informatique</h3>
           <h4>Langages :</h4>
-          <p>- HTLM / CSS</p>
+          <p>- HTML / CSS</p>
             <p>- JavaScript</p> 
             <p>- PHP</p> 
             <p>- SQL</p> 
